"""
Common headers and definitions for SAMWISE flight software.
"""

package(default_visibility = ["//visibility:public"])

cc_library(
    name = "common",
    hdrs = [
        "bit-support.h",
        "config.h",
        "macros.h",
        "pins.h",
        "typedefs.h",
        "utils.h",
    ],
    deps = [
        "//src/packet:packet_hdrs",
    ] + select({
        "//bzl:test_mode": [],
        "//conditions:default": [
            "@pico-sdk//src/common/pico_time",
            "@pico-sdk//src/rp2_common/hardware_pwm:hardware_pwm",
        ],
    }),
    includes = ["."],
)
