add_subdirectory(adcs)
add_subdirectory(adm1176)
add_subdirectory(burn_wire)
add_subdirectory(device_status)
add_subdirectory(flash)
add_subdirectory(logger)
add_subdirectory(mppt)
add_subdirectory(neopixel)
add_subdirectory(onboard_led)
add_subdirectory(payload_uart)
add_subdirectory(rfm9x)
add_subdirectory(watchdog)
