"""
Initialization routines for SAMWISE flight software.

This module handles system initialization including hardware setup,
peripheral configuration, and state machine initialization.
"""

package(default_visibility = ["//visibility:public"])

cc_library(
    name = "init",
    srcs = ["init.c"],
    hdrs = ["init.h"],
    includes = ["."],
    deps = [
        "//src/common",
        "//src/slate",
        "@pico-sdk//src/rp2_common/hardware_i2c:hardware_i2c",
        "@pico-sdk//src/rp2_common/pico_stdlib:pico_stdlib",
    ],
    target_compatible_with = ["//platforms:arm_cortex_m33"],
)
