"""
Task scheduler and state machine for SAMWISE flight software.

The scheduler manages task dispatching and state transitions. It implements
a cooperative multitasking system where tasks are dispatched periodically
based on their configured dispatch periods.
"""

package(default_visibility = ["//visibility:public"])

# State ID enum (zero dependencies, breaks circular deps)
cc_library(
    name = "state_ids",
    hdrs = ["state_ids.h"],
    includes = ["."],
)

# State machine header-only library (without states.h to avoid circular deps)
cc_library(
    name = "state_machine",
    hdrs = ["state_machine.h"],
    includes = ["."],
    deps = [
        ":state_ids",
        "//src/common",
    ],
)

# Central state registry
cc_library(
    name = "state_registry",
    srcs = ["state_registry.c"],
    hdrs = ["state_registry.h"],
    includes = ["."],
    deps = [
        ":state_ids",
        ":state_machine",
    ],
)

# Mock state definitions for host tests
cc_library(
    name = "state_mock",
    srcs = ["state_mock.c"],
    deps = [
        ":state_machine",
        ":state_ids",
        "//src/common",
        "//src/error:error_mock",
        "//src/slate",
        "//src/test_mocks",
    ],
    testonly = True,
)

# Scheduler header-only library (for test infrastructure)
cc_library(
    name = "scheduler_hdrs",
    hdrs = ["scheduler.h"],
    includes = ["."],
    testonly = True,
    deps = [
        ":state_machine",
        ":state_registry",
        ":state_ids",
        "//src/common",
        "//src/slate",
    ] + select({
        "//bzl:test_mode": [
            "//src/error:error_mock",
            "//src/test_mocks:pico_stdlib_mock",
            "//src/test_mocks:pico_time_mock",
        ],
        "//conditions:default": [],
    }),
)

# Main scheduler library
cc_library(
    name = "scheduler",
    srcs = ["scheduler.c"],
    hdrs = ["scheduler.h"],
    deps = [
        ":state_machine",
        ":state_registry",
        ":state_ids",
        "//src/common",
        "//src/states/init:init_state",
        "//src/states/running:running_state",
        "//src/states/bringup:bringup_state",
        "//src/states/burn_wire:burn_wire_state",
        "//src/states/burn_wire_reset:burn_wire_reset_state",
        "//src/states/shutdown:shutdown_state",
    ] + select({
        "//bzl:test_mode": [
            "//src/drivers/logger:logger_mock",
            "//src/error:error_mock",
            "//src/test_mocks:pico_stdlib_mock",
            "//src/test_mocks:pico_time_mock",
        ],
        "//conditions:default": [
            "//src/drivers/logger",
            "//src/error",
            "@pico-sdk//src/rp2_common/pico_stdlib:pico_stdlib",
        ],
    }),
)
